fixed img overflow on modal

--- a/app/public/css/styles.css
+++ b/app/public/css/styles.css
@@ -53,3 +53,7 @@ html {
 .navbar-light .navbar-toggler {
     border: none;
 }
+
+#userMatchImage {
+    max-width: 400px;
+}
